syntax = "proto3";

option java_package = "com.rulhouse.evgawatcher.datastore";
option java_multiple_files = true;

message UserPreferencesProto {
  // filter for showing / hiding completed tasks
  bool showing_out_of_stock = 1;
  bool price_ascending = 2;
  bool showing_no_price = 3;
  bool filter_state = 4;
}